syntax = "proto3";
import "google/protobuf/empty.proto";
package RGU.WebProgramming.Grpc;


option csharp_namespace = "RGU.WebProgramming.Grpc";

service AuthorService {
  // Получить список авторов
  rpc GetAuthors (google.protobuf.Empty) returns (AuthorModel);
}

message AuthorModel {
  int32 id = 1;
  string first_name = 2;
  string last_name = 3;
}